# stock

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/commands/: critical-review.md
.claude/commands/opsx/: apply.md  archive.md  bulk-archive.md  continue.md  design.md  ff-big.md  ff.md  onboard.md  pre-design.md  verify.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/stock-analysis/: SKILL.md
.claude/skills/test-driven-development/: SKILL.md  (+1 more)
companies/: 000697.XSHE-炼石航空.md
openspec/: config.yaml
scripts/: build_evidence_pack.py  config.py  fetch_stock_data.py  init_daily_reports.py  parse_stock_list.py  templates.py  windowing.py
scripts/fetchers/: akshare_fetcher.py  tushare_fetcher.py
templates/: catalyst_node.md  company_profile.md  daily_index.md  daily_stock_report.md  industry_node.md  knowledge_catalysts_index.md  knowledge_events_index.md  knowledge_evidence_index.md  knowledge_index.md  knowledge_industries_index.md  knowledge_reviews_index.md  knowledge_themes_index.md  research_log.md  stock_pool_ranking.md  theme_industry_review.md  vault_index.md
tests/: test_build_evidence_pack.py  test_config.py  test_fetch_stock_data.py  test_init_daily_reports.py  test_parse_stock_list.py  test_templates.py
tests/fetchers/: test_akshare.py  test_tushare.py
vault/: index.md  log.md
vault/companies/: 000697.XSHE-炼石航空.md  index.md
vault/industries/: index.md
vault/maintenance/: index.md
vault/market/: index.md
vault/questions/: index.md
vault/raw/: index.md
vault/themes/: index.md
(+58 files in other folders)
