[project]
name = "stock-analysis-workflow"
version = "0.1.0"
description = "A-share stock analysis workflow helpers"
requires-python = ">=3.11"
dependencies = [
    "tushare",
    "akshare",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
